# Comprix

./: .clang-format  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
source/: CMakeLists.txt  Detectors.h  DynamicProcessors.h  Filters.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h
source/DSP/: Detectors.h  DryWet.h  DynamicProcessors.h  Filters.h
source/UI/: Dial.h  Meter.h  Theme.h  ToggleButton.h  UIutils.h
source/UI/Components/: GainReductionVisualizer.h  Meters.h
source/UI/Sections/: Compression.h  Metering.h  Meters.h  Scope.h  Sidechain.h
